# opencv-exercises

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  IDEAS  KalmanMouse.cpp  SVMTest.cpp  SharpenImage.cpp  digits.py
